# detray_data_model

./: CMakeLists.txt  README.md
allocators/: device_allocator.hpp  device_allocator_base.cu  device_allocator_base.hpp  host_allocator.hpp  host_allocator_base.cu  host_allocator_base.hpp  managed_allocator.hpp  managed_allocator_base.cu  managed_allocator_base.hpp
cmake/: detraydm-config.cmake.in
core/: CMakeLists.txt  cuda_error_check.cu  cuda_error_check.cuh  types.hpp
core/include/detraydm/allocators/: device_allocator.hpp  device_allocator_base.hpp  host_allocator.hpp  host_allocator_base.hpp  managed_allocator.hpp  managed_allocator_base.hpp
core/include/detraydm/containers/: const_device_vector.hpp  device_vector.hpp  host_vector.hpp  static_vector.hpp
core/include/detraydm/memory/: memory_manager.hpp  memory_manager_interface.hpp
core/include/detraydm/memory/cuda/: arena_memory_manager.hpp  direct_memory_manager.hpp
core/include/detraydm/utils/: cuda_error_handling.hpp  cuda_types.hpp
core/src/allocators/: device_allocator_base.cpp  device_allocator_base.cu  host_allocator_base.cu  managed_allocator_base.cu
core/src/memory/: memory_manager.cpp
core/src/memory/cuda/: arena_memory_manager.cu  direct_memory_manager.cu
core/src/utils/: cuda_error_handling.cu
detector/: dummy_detector.hpp
tests/: CMakeLists.txt  detector.hpp  test_containers.cu  test_detector.cpp  test_detector_on_device.cu  test_detector_on_host.cpp  test_host_allocations.cpp  test_vector_on_device.cu
vector/: array_vector.hpp  const_device_vector.hpp  device_vector.hpp  host_vector.hpp  static_vector.hpp  vector.hpp
